--- a/.github/workflows/run-niftex-snapshots.yaml
+++ b/.github/workflows/run-niftex-snapshots.yaml
@@ -26,7 +26,7 @@ jobs:
           --description "@metalithio/retroactive-query output for commit ${{ github.sha }}" \
           ${{ secrets.GCP_PROJECT_ID }}:retroactive_${{ github.sha }}
 
-  run-erc20-snapshot:
+  run-niftex-snapshots:
     needs: create-dataset
     runs-on: ubuntu-latest
 
@@ -34,7 +34,9 @@ jobs:
       max-parallel: 1
       matrix:
         schema:
-          - file: "./src/12_niftex_erc20_queries.sql"
+          - file: "./src/12_all_tier_users.sql"
+          - file: "./src/13_tier_one_users.sql"
+          - file: "./src/14_v1_contributors.sql"
 
     steps:
       - uses: actions/checkout@v2
