--- a/.github/workflows/run-niftex-snapshots.yaml
+++ b/.github/workflows/run-niftex-snapshots.yaml
@@ -34,9 +34,14 @@ jobs:
       max-parallel: 1
       matrix:
         schema:
-          - file: "./src/12_all_tier_users.sql"
-          - file: "./src/13_tier_one_users.sql"
-          - file: "./src/14_v1_contributors.sql"
+          - file: "./src/01_uni_v1_pairs.sql"
+          - file: "./src/02_niftex_uni_v1_pairs.sql"
+          - file: "./src/03_uni_v2_pairs.sql"
+          - file: "./src/04_niftex_uni_v2_pairs.sql"
+          - file: "./src/05_uniswap_contracts.sql"
+          - file: "./src/06_all_tier_users.sql"
+          - file: "./src/07_tier_one_users.sql"
+          - file: "./src/08_v1_contributors.sql"
 
     steps:
       - uses: actions/checkout@v2
