--- a/.github/workflows/run-niftex-snapshots.yaml
+++ b/.github/workflows/run-niftex-snapshots.yaml
@@ -34,6 +34,8 @@ jobs:
       max-parallel: 1
       matrix:
         schema:
+          - file: "./src/09_all_tier_matic_users.sql"
+          - file: "./src/10_tier_one_matic_users.sql"
           - file: "./src/01_uni_v1_pairs.sql"
           - file: "./src/02_niftex_uni_v1_pairs.sql"
           - file: "./src/03_uni_v2_pairs.sql"
@@ -42,7 +44,7 @@ jobs:
           - file: "./src/06_all_tier_users.sql"
           - file: "./src/07_tier_one_users.sql"
           - file: "./src/08_v1_contributors.sql"
-
+          
     steps:
       - uses: actions/checkout@v2
 
